fix text align and icon alignment

--- a/src/components/Journey/Experience.module.css
+++ b/src/components/Journey/Experience.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 20px 60px 20px 60px;
 }
 
 .experienceTitle {
