--- a/src/components/Journey/ExperienceIcon.module.css
+++ b/src/components/Journey/ExperienceIcon.module.css
@@ -2,9 +2,14 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
-  padding: 30px;
+  padding: 10px;
+  border: 2px solid #2f4f4f;
+  border-radius: 100%;
+  position: relative;
+  left: -22px;
+  background-color: #f3f4f6;
 }
 
 .experienceIcon {
-  width: 30px;
+  width: 22px;
 }
